--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <div class="heading">
           <h2>男性も育児休業を一年まるまる取りましょう！！</h2>
           <h3>Let's enjoy life with baby!</h3>
+          <script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/jsbanner?sid=3585716&pid=887059264"></script><noscript><a href="//ck.jp.ap.valuecommerce.com/servlet/referral?sid=3585716&pid=887059264" rel="nofollow"><img src="//ad.jp.ap.valuecommerce.com/servlet/gifbanner?sid=3585716&pid=887059264" border="0"></a></noscript>
         </div>
       </div>
     </div>
