--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <img src="https://prog-8.com/images/html/advanced/ruby.png">
               <p>メリット３</p>
             </div>
-            <p class="txt-contents">赤ちゃんが寝ている間も夫婦2人のほうが楽しい。平日の公園でだらだらしたり、NETFLIXもめっちゃ見れます。</p>
+            <p class="txt-contents">赤ちゃんが寝ている間も夫婦2人のほうが楽しい。平日の公園でごろごろしたり、NETFLIXもめっちゃ見れます。</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
