--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>男性も育児休業を一年とろう！</title>
+    <title>男性も育児休業を一年とろう！【育児休業計算ツール】</title>
+    <meta name="description" content="男性の育児休業はメリットだらけ。普段の手取りの8割はカバーされます。赤ちゃんと過ごせる時間が2000時間以上アップ。男性も育児休業を一年とろう！まずは大体いくらくらいもらえるのか計算してみましょう。">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
