--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>男性も育児休業を一年とろう！【育児休業計算ツール】</title>
     <meta name="description" content="男性の育児休業はメリットだらけ。普段の手取りの8割はカバーされます。赤ちゃんと過ごせる時間が2000時間以上アップ。男性も育児休業を一年とろう！まずは大体いくらくらいもらえるのか計算してみましょう。">
+    <meta name="keywords" content="男性の育児休業,育児休業給付金,計算ツール,男性,育児休業,メリット,社会保険料,免除">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   </head>
