--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="heading">
           <h2>男性も育児休業を一年まるまる取りましょう！！</h2>
           <h3>Let's enjoy life with baby!</h3>
-          
+          <script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/jsbanner?sid=3585716&pid=887063550"></script><noscript><a href="//ck.jp.ap.valuecommerce.com/servlet/referral?sid=3585716&pid=887063550" rel="nofollow"><img src="//ad.jp.ap.valuecommerce.com/servlet/gifbanner?sid=3585716&pid=887063550" border="0"></a></noscript>
         </div>
       </div>
     </div>
@@ -79,6 +79,6 @@
         <p></p>
       </div>
     </footer>
-    <script language="javascript" src="//ad.jp.ap.valuecommerce.com/servlet/smartphonebanner?sid=3585716&pid=887063540&position=overlay"></script>
+    
   </body>
 </html>
